examples/test/testpolicy14249.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14249
  namespace: namespace415
spec:
  podSelector:
    matchLabels:
      key37: value24
      key28: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value37
          key49: value9
      podSelector:
        matchLabels:
          key30: value6
          key44: value18
